--- a/etl/pom.xml
+++ b/etl/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!--
-  ~ Copyright 2010-2013 Orient Technologies LTD (www.orientechnologies.com)
+  ~ Copyright 2010-2016 OrientDB LTD (www.orientdb.com)
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -56,11 +56,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <!--<dependencies>-->
-                    <!--<dependency>-->
-                        <!--<groupId>org.apache.maven.surefire</groupId>-->
-                        <!--<artifactId>surefire-junit47</artifactId>-->
-                        <!--<version>${surefire.version}</version>-->
-                    <!--</dependency>-->
+                <!--<dependency>-->
+                <!--<groupId>org.apache.maven.surefire</groupId>-->
+                <!--<artifactId>surefire-junit47</artifactId>-->
+                <!--<version>${surefire.version}</version>-->
+                <!--</dependency>-->
                 <!--</dependencies>-->
             </plugin>
             <plugin>
