HA: Supported the new tag `newNodeStrategy`
https://github.com/orientechnologies/orientdb/issues/6886

--- a/distributed/config/default-distributed-db-config.json
+++ b/distributed/config/default-distributed-db-config.json
@@ -4,6 +4,7 @@
   "writeQuorum": "majority",
   "executionMode": "undefined",
   "readYourWrites": true,
+  "newNodeStrategy": "static",
   "servers": {
     "*": "master"
   },
