--- a/driver/pom.xml
+++ b/driver/pom.xml
@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <gremlin.version>3.2.3</gremlin.version>
-        <orientdb.version>2.2.12</orientdb.version>
+        <orientdb.version>3.0.0-SNAPSHOT</orientdb.version>
     </properties>
 
     <developers>
