--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -42,16 +42,16 @@
                 </configuration>
             </plugin>
             <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                <!--<version>2.19.1</version>-->
-                <!--<configuration>-->
-                    <!--<systemPropertyVariables>-->
-                        <!--<buildDirectory>${project.build.directory}</buildDirectory>-->
-                        <!--<ORIENTDB_HOME>target</ORIENTDB_HOME>-->
-                    <!--</systemPropertyVariables>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-surefire-plugin</artifactId>-->
+            <!--<version>2.19.1</version>-->
+            <!--<configuration>-->
+            <!--<systemPropertyVariables>-->
+            <!--<buildDirectory>${project.build.directory}</buildDirectory>-->
+            <!--<ORIENTDB_HOME>target</ORIENTDB_HOME>-->
+            <!--</systemPropertyVariables>-->
 
-                <!--</configuration>-->
+            <!--</configuration>-->
             <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -81,9 +81,18 @@
             <version>${project.parent.version}</version>
             <scope>test</scope>
         </dependency>
+
+
         <dependency>
             <groupId>com.orientechnologies</groupId>
             <artifactId>orientdb-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-lucene</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
