--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "angular-strap": "2.3.9",
     "angular-translate": "^2.11.0",
     "angular-translate-loader-partial": "^2.11.0",
+    "bootstrap-switch": "^3.3.2",
     "codemirror": "^5.16.0",
     "d3": "^3.5.17",
     "filesize": "^3.3.0",
     "font-awesome": "^4.6.3",
     "jquery": "2.1.3",
     "js-base64": "^2.1.9",
+    "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
     "ng-table": "^1.0.0",
     "ng-tags-input": "^3.1.1",
