--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "angular-translate": "^2.11.0",
     "angular-translate-loader-partial": "^2.11.0",
     "bootstrap-switch": "^3.3.2",
+    "c3": "^0.4.11",
     "codemirror": "^5.16.0",
     "d3": "^3.5.17",
     "filesize": "^3.3.0",
@@ -24,6 +25,7 @@
     "js-base64": "^2.1.9",
     "json-loader": "^0.5.4",
     "lodash": "^4.13.1",
+    "moment": "^2.17.0",
     "ng-table": "^1.0.0",
     "ng-tags-input": "^3.1.1",
     "noty": "^2.3.8",
