--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "d3": "^3.5.17",
     "filesize": "^3.3.0",
     "font-awesome": "^4.6.3",
+    "fullcalendar": "^3.1.0",
     "jquery": "2.1.3",
     "js-base64": "^2.1.9",
     "json-loader": "^0.5.4",
