--- a/package.json
+++ b/package.json
@@ -2,6 +2,13 @@
   "name": "orientdbstudio",
   "version": "2.3.0-snapshot",
   "dependencies": {
+    "@angular/common": "^2.2.4",
+    "@angular/compiler": "^2.2.4",
+    "@angular/core": "^2.2.4",
+    "@angular/http": "^2.2.4",
+    "@angular/platform-browser": "^2.2.4",
+    "@angular/platform-browser-dynamic": "^2.2.4",
+    "@angular/upgrade": "^2.2.4",
     "angular": "^1.5.9",
     "angular-animate": "^1.5.9",
     "angular-bootstrap-switch": "^0.5.1",
@@ -18,10 +25,12 @@
     "bootstrap-switch": "^3.3.2",
     "c3": "^0.4.11",
     "codemirror": "^5.16.0",
+    "core-js": "^2.4.1",
     "d3": "^3.5.17",
     "filesize": "^3.3.0",
     "font-awesome": "^4.6.3",
     "fullcalendar": "^3.1.0",
+    "ie-shim": "^0.1.0",
     "jquery": "2.1.3",
     "js-base64": "^2.1.9",
     "json-loader": "^0.5.4",
@@ -32,11 +41,14 @@
     "noty": "^2.3.8",
     "nprogress": "^0.2.0",
     "raw-loader": "^0.5.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-rc.4",
     "spectrum-colorpicker": "^1.8.0",
     "spin.js": "^2.3.2",
     "string": "^3.3.1",
     "ui-select": "^0.18.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "zone.js": "^0.7.2"
   },
   "scripts": {
     "build": "NODE_ENV=production webpack -p --progress --profile --colors",
@@ -49,13 +61,13 @@
     "bootstrap": "^3.3.5",
     "css-loader": "0.23.1",
     "file-loader": "^0.9.0",
+    "html-loader": "^0.3.0",
     "html-webpack-plugin": "1.7.0",
+    "ng-annotate-loader": "0.0.10",
+    "ng-annotate-webpack-plugin": "^0.1.2",
     "ngtemplate-loader": "^1.3.1",
     "style-loader": "0.13.0",
     "url-loader": "^0.5.7",
-    "html-loader": "^0.3.0",
-    "ng-annotate-loader": "0.0.10",
-    "ng-annotate-webpack-plugin": "^0.1.2",
     "webpack": "2.1.0-beta.27",
     "webpack-dev-server": "2.1.0-beta.12"
   },
