Blocked Angula 1 version due http broken in 1.6.0

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "@angular/platform-browser": "^2.2.4",
     "@angular/platform-browser-dynamic": "^2.2.4",
     "@angular/upgrade": "^2.2.4",
-    "angular": "^1.5.9",
-    "angular-animate": "^1.5.9",
+    "angular": "1.5.9",
+    "angular-animate": "1.5.9",
     "angular-bootstrap-switch": "^0.5.1",
     "angular-local-storage": "^0.2.7",
-    "angular-resource": "^1.5.9",
-    "angular-route": "^1.5.9",
-    "angular-sanitize": "^1.5.9",
+    "angular-resource": "1.5.9",
+    "angular-route": "1.5.9",
+    "angular-sanitize": "1.5.9",
     "angular-scroll": "^1.0.0",
     "angular-smart-table": "^2.1.8",
     "angular-spectrum-colorpicker": "^1.4.5",
