reformats code with new settings

--- a/lucene/config/default-distributed-db-config.json
+++ b/lucene/config/default-distributed-db-config.json
@@ -16,7 +16,9 @@
     "index": {
     },
     "*": {
-      "servers": ["<NEW_NODE>"]
+      "servers": [
+        "<NEW_NODE>"
+      ]
     }
   }
 }
