Added angular-motion for Effects

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-route": "1.5.9",
     "angular-sanitize": "1.5.9",
     "angular-scroll": "^1.0.0",
+    "angular-motion" : "0.4.4",
     "angular-smart-table": "^2.1.8",
     "angular-spectrum-colorpicker": "^1.4.5",
     "angular-strap": "2.3.9",
