--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.2.15</version>
+        <version>2.2.16-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
