--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@angular/common": "^2.2.4",
     "@angular/compiler": "^2.2.4",
     "@angular/core": "^2.2.4",
+    "@angular/forms": "^2.2.4",
     "@angular/http": "^2.2.4",
     "@angular/platform-browser": "^2.2.4",
     "@angular/platform-browser-dynamic": "^2.2.4",
