removes dependency and use of orientdb-grapg API (TP2) in favour of orientdb-core graph API
refs https://github.com/orientechnologies/orientdb/issues/7117

--- a/etl/config/orientdb-etl-log.properties
+++ b/etl/config/orientdb-etl-log.properties
@@ -27,9 +27,10 @@ handlers = java.util.logging.ConsoleHandler, java.util.logging.FileHandler
 .level = INFO
 com.orientechnologies.level = INFO
 com.orientechnologies.orient.server.distributed.level = INFO
+com.orientechnologies.orient.etl.level = FINE
 
 # Set the default logging level for new ConsoleHandler instances
-java.util.logging.ConsoleHandler.level = INFO
+java.util.logging.ConsoleHandler.level = FINE
 # Set the default formatter for new ConsoleHandler instances
 java.util.logging.ConsoleHandler.formatter = com.orientechnologies.common.log.OAnsiLogFormatter
 
