- fix bug report for astar graphdb in #7103 issue  -fix null checking in astar function .  - add toCalendar method as we discussed on Better support for time expression #7081.  - add some test cases for toCalendar Method . (need to be documented) .

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -245,6 +245,13 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.ibm.icu/icu4j -->
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>58.2</version>
+        </dependency>
     </dependencies>
 
 </project>
