--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,11 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.orientechnologies</groupId>
+        <artifactId>orientdb-gremlin-parent</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+        <relativePath>../</relativePath>
+    </parent>
 
     <groupId>com.orientechnologies</groupId>
     <name>OrientDB Gremlin Server</name>
     <artifactId>orientdb-gremlin-server</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
     <properties>
         <tinkerpop.version>3.2.3</tinkerpop.version>
     </properties>
